helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline6-service
  namespace: abc-bank
spec:
  type: ClusterIP
  selector:
    app: pipeline6-app
  ports:
    - port: 80
      targetPort: 80
