helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline6-ingress
  namespace: abc-bank
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: pipeline6.local
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: pipeline6-service
            port:
              number: 80

      - path: /login
        pathType: Prefix
        backend:
          service:
            name: pipeline6-service
            port:
              number: 80

      - path: /signup
        pathType: Prefix
        backend:
          service:
            name: pipeline6-service
            port:
              number: 80
